- Applied Mark's -- <mwatts42@gmail.com> -- patch that changes 
  the Core to support being compiled for Silverlight 2

- Applied Louis DeJardin's patch adding TraceLogger as a new logger implementation

- Applied Chris Bilson's patch fixing CORE-15
  "WebLogger Throws When Logging Outside of an HttpContext"

Release Candidate 3
===================

- Added IServiceProviderEx which extends IServiceProvider

- Added Pair<T,S> class. 

- Applied Bill Pierce's patch fixing CORE-9 
  "Allow CastleComponent Attribute to Specify Lifestyle in Constructor"

- Added UseSingleInterfaceProxy to CompomentModel to control the proxying
  behavior while maintaining backward compatibility.
  Added the corresponding ComponentProxyBehaviorAttribute.

- Made NullLogger and IExtnededLogger

- Enabled a new format on ILogger interface, with 6 overloads for each method:
    Debug(string)
    Debug(string, Exception)
    Debug(string, params object[])
    DebugFormat(string, params object[])
    DebugFormat(Exception, string, params object[])
    DebugFormat(IFormatProvider, string, params object[])
    DebugFormat(IFormatProvider, Exception, string, params object[])

  The "FatalError" overloads where marked as [Obsolete], replaced by "Fatal" and "FatalFormat".

0.0.1.0
=======

- Included IProxyTargetAccessor

- Removed IMethodInterceptor and IMethodInvocation, that have been replaced
  by IInterceptor and IInvocation

- Added FindByPropertyInfo to PropertySetCollection

- Made the DependencyModel.IsOptional property writable

- Applied Curtis Schlak's patch fixing IOC-27
  "assembly resource format only works for resources where the assemblies name and default namespace are the same."
  
  Quoting:

  "I chose to preserve backwards compatibility by implementing the code in the 
  reverse order as suggested by the reporter. Given the following URI for a resource:

  assembly://my.cool.assembly/context/moo/file.xml
